Remove imagens antigas e atualiza index

--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
                     </div>
                 </div>
                 <div>
-                    <img src="./img/barbearia-1.jpg" alt="">
+                    <img src="./img/banner.jpg" alt="">
                 </div>
             </div>
         </section>
