atualização do site

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -139,7 +139,7 @@
             </div>
         </section>
 
-        <section class="secao-sobre" id="sobre">
+        <section class="secao-sobre" id="sobre-nos">
             <div class="container">
                 <div class="sobre-a-barbearia">
                     <div class="texto">
@@ -171,7 +171,7 @@
                     <p>Não perca mais tempo com cortes mediocres.
                          Agende agora e experimente o padrão de excelência que você merece.</p>
                 </div>
-                <div class="contatos">
+                <div class="contatos" id="contato">
                     
                     <div>
                         <h3>Nossa Localização</h3>
