atualização do index

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <nav>
                 <a href="#servicos">SERVIÇOS</a>
                 <a href="#precos">PREÇOS</a>
-                <a href="#sobre-nos">SOBRE NÓS</a>
+                <a href="#sobre-nos">SOBRE</a>
                 <a href="#contato">CONTATO</a>
             </nav>
        </div>
